--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "test_for_hexlet",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,4 +10,3 @@
   "author": "",
   "license": "ISC"
 }
-"type": "module"
